--- a/bn254/Cargo.toml
+++ b/bn254/Cargo.toml
@@ -3,6 +3,5 @@ name = "bn254"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[dev-dependencies]
+rand_core = { version="0.6.4", default-features = false, features = ["getrandom"] }
